Links wrap correctly when too long.

--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -127,6 +127,7 @@ nav {
     color: $accent-color;
     font-size: 0.7em;
     font-family: $accent-font;
+    word-wrap: break-word;
   }
 
   header {
